--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!-- يبدأ من هنا -->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
->
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>لعبة العميل السري</title>
 <style>
+  /* نفس التنسيق السابق بدون تغيير */
   body {
     font-family: Arial, sans-serif;
     background: #f9f9f9;
@@ -223,7 +224,8 @@
   });
 
   socket.on("start-game", (data) => {
-    voted = false; // ← هذا السطر المهم
+    voted = false;
+    voteSection.style.pointerEvents = "auto"; // ← مهم جدًا لإعادة التفعيل
 
     hintInput.value = "";
     hintsList.style.display = "none";
